<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="353dp"
        android:layout_height="64dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="29dp"
        android:text="@string/_continue"
        android:onClick="moveToCompleteProfilePage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGender"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/name_surname"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo4" />

    <TextView
        android:id="@+id/txtInfo4"
        android:layout_width="258dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/CreateProfileInfo"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle4" />

    <TextView
        android:id="@+id/txtTitle4"
        android:layout_width="413dp"
        android:layout_height="52dp"
        android:layout_marginTop="80dp"
        android:text="@string/complete_your_profile"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnGender"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:entries="@array/genderTypes"
        android:tooltipText="Gender"
        android:prompt="@string/gender_female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge" />



</androidx.constraintlayout.widget.ConstraintLayout>