<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassActivity">

    <TextView
        android:id="@+id/txtForgotInfo"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="117dp"
        android:text="@string/ForgotPasswordInfo"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle3" />

    <TextView
        android:id="@+id/txtTitle3"
        android:layout_width="413dp"
        android:layout_height="52dp"
        android:layout_marginTop="92dp"
        android:text="@string/reset_your_password"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSendResetLink"
        android:layout_width="353dp"
        android:layout_height="64dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="29dp"
        android:text="@string/send_reset_link"
        android:onClick="sendForgotLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotEmail" />

    <EditText
        android:id="@+id/txtForgotEmail"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>