<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/txtPass2"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/verify_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="413dp"
        android:layout_height="89dp"
        android:layout_marginTop="76dp"
        android:text="@string/sign_up"
        android:textColor="?android:textColorPrimary"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="353dp"
        android:layout_height="64dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="29dp"
        android:onClick="SignUp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass2" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="258dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/register_info"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>