<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="413dp"
        android:layout_height="89dp"
        android:layout_marginTop="80dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLoginEmail"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2" />

    <EditText
        android:id="@+id/txtLoginPass"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="353dp"
        android:layout_height="64dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="29dp"
        android:text="@string/sign_in"
        android:onClick="Log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtInfo3"
        android:layout_width="148dp"
        android:layout_height="27dp"
        android:layout_marginStart="234dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:clickable="true"
        android:text="Forgot Password?"
        android:onClick="moveToForgotPassPage"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPass" />
</androidx.constraintlayout.widget.ConstraintLayout>